--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Samir Majumdar</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
-                            <p>I'm a web designer with extensive experience for over 2 years. I'm expertised to create template design, graphic design and website design.</p>
+                            <p>I'm a web designer with extensive experience for over 3 years. I'm expertised to create template design, graphic design and website design. I am rearning React JS & other backend parts I wish to be a fullstack developer.</p>
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img desk-img padd-15">
@@ -81,29 +81,36 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Web Designer and <span>Web Developer</span></h3>
-                                    <p>I'm a web designer with extensive experience for over 2 years. I'm expertised to create template design, graphic design and website design. I'm a web designer with extensive experience for over 2 years. I'm expertised to create template design, graphic design and website design.</p>
+                                    <p>I'm a web designer with extensive experience for over 3 years. I'm expertised to create template design, graphic design and website design. I am rearning React JS & other backend parts I wish to be a fullstack developer.</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="personal-info padd-15">
                                     <div class="row">
                                         <div class="info-item padd-15">
-                                            <p>Birthday : <span>6th Sep 1993</span></p>
+                                            <p>Graduate (Degree) : <span>B.Sc General (Science)</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Age : <span>28</span></p>
+                                            <p>Post Graduate (Diploma) : <span>Web Designing</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Website : <span>www.smajumdar.com</span></p>
+                                            <p>Post Graduate (Diploma) : <span>Graphic Designing</span></p>
                                         </div>
+                                        <div class="info-item padd-15">
+                                            <p>Birthday : <span>6th September 1993</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Age : <span>30+</span></p>
+                                        </div>
+                                        
                                         <div class="info-item padd-15">
                                             <p>Email : <span>samirmjd@gmail.com</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Degree : <span>B.Sc(General)</span></p>
+                                            <p>Phone : <span>6290215702</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Phone : <span>6290215702</span></p>
+                                            <p>Website : <a href="https://samir-1993.github.io/samir_majumdar-portfolio.github.io/" target="_blank">samir-1993.github.io/samir_majumdar-portfolio.github.io/</a></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>City : <span>Kolkata</span></p>
@@ -154,6 +161,13 @@
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 92%"></div>
                                                 <div class="skill-percent">92%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>WORDPRESS</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 55%"></div>
+                                                <div class="skill-percent">55%</div>
                                             </div>
                                         </div>
                                     </div>
@@ -288,7 +302,7 @@
 
                                 </div>
                                 <h4>Web Design</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                <p>I create websites using html, css, js & bootstrap.</p>
                             </div>
                         </div>
                         <!-- ====== Service item end ======= -->
@@ -299,7 +313,7 @@
                                     <i class="fa far fa-bezier-curve"></i>
                                 </div>
                                 <h4>Graphic Design</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                <p>I create logo, banners, templates design & more.</p>
                             </div>
                         </div>
                         <!-- ====== Service item end ======= -->
@@ -309,8 +323,8 @@
                                 <div class="icon">
                                     <i class="fa fa-palette"></i>
                                 </div>
-                                <h4>UI Design</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                <h4>UI & UX Design</h4>
+                                <p>I create UI & UX design of<br> websites.</p>
                             </div>
                         </div>
                         <!-- ====== Service item end ======= -->
@@ -321,7 +335,7 @@
                                     <i class="fa fa-mobile-alt"></i>
                                 </div>
                                 <h4>Responsive Design</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                <p>I create fully responsive design for mobile & other devices.</p>
                             </div>
                         </div>
                         <!-- ====== Service item end ======= -->
@@ -332,7 +346,7 @@
                                     <i class="fa fas fa-icons"></i>
                                 </div>
                                 <h4>Social Media Design</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                <p>I create social media post, occasion, invitation, hiring & others.</p>
                             </div>
                         </div>
                         <!-- ====== Service item end ======= -->
@@ -343,7 +357,7 @@
                                     <i class="fa fas fa-code"></i>
                                 </div>
                                 <h4>Web Development</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                <p>I am a Frontend developer. I am trying to learn react Js.</p>
                             </div>
                         </div>
                         <!-- ====== Service item end ======= -->
@@ -469,7 +483,8 @@
                                 <i class="fa fa-globe-europe"></i>
                             </div>
                             <h4>Website</h4>
-                            <p>www.domain.com</p>
+                            <p><a href="https://samir-1993.github.io/samir_majumdar-portfolio.github.io/" target="_blank">samir_majumdar-portfolio.github.io/</a></p>
+                            
                         </div>
                         <!-- ====== Contact info item end ======= -->
                     </div>
@@ -481,33 +496,33 @@
                             <div class="row">
                                 <div class="form-item col-6 padd-15">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Name">
+                                        <input type="text" class="form-control" placeholder="Name" name="Name" required>
                                     </div>
                                 </div>
                                 <div class="form-item col-6 padd-15">
                                     <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Email">
+                                        <input type="email" class="form-control" placeholder="Email" name="email" required>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Subject">
+                                        <input type="text" class="form-control" placeholder="Subject" name="subject" required>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
                                     <div class="form-group">
-                                        <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
+                                        <textarea class="form-control" id="" placeholder="Message" name="message" required></textarea>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
                                     <div class="form-group text-center">
-                                        <button type="submit" class="btn">Send Message</button>
+                                        <button type="submit" class="btn" name="submit">Send Message</button>
                                     </div>
                                 </div>
                             </div>
