--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Samir Majumdar</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
-                            <p>I'm a web designer with extensive experience for over 3 years. I'm expertised to create template design, graphic design and website design. I am rearning React JS & other backend parts I wish to be a fullstack developer.</p>
+                            <p>I'm a web designer with extensive experience for over 3 years. I'm expertised to create template design, graphic design and website design. I am learning React JS & other backend parts I wish to be a fullstack developer.</p>
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img desk-img padd-15">
@@ -81,7 +81,7 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Web Designer and <span>Web Developer</span></h3>
-                                    <p>I'm a web designer with extensive experience for over 3 years. I'm expertised to create template design, graphic design and website design. I am rearning React JS & other backend parts I wish to be a fullstack developer.</p>
+                                    <p>I'm a web designer with extensive experience for over 3 years. I'm expertised to create template design, graphic design and website design. I am learning React JS & other backend parts I wish to be a fullstack developer.</p>
                                 </div>
                             </div>
                             <div class="row">
