new project works update

--- a/index.html
+++ b/index.html
@@ -406,9 +406,12 @@
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
                                     <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="cognianhomes.com">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
                                                 <img src="images/cognian.webp" alt="Cognian Home Solutions Pvt. Ltd." title="Cognian Home Solutions Pvt. Ltd.">
+                                            </div>
+                                            <a class="port_iconbox" href="https://cognianhomes.com/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
                                             </a>
                                         </div>
                                     </div>
@@ -417,9 +420,12 @@
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
                                     <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="agorabanquet.com">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
                                                 <img src="images/agora-banquets.webp" alt="Agora Banquet" title="Agora Banquet">
+                                            </div>
+                                            <a class="port_iconbox" href="https://agorabanquet.com/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
                                             </a>
                                         </div>
                                     </div>
@@ -428,9 +434,12 @@
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
                                     <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="ergowoodlines.com">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
                                                 <img src="images/ergo-woodline.webp" alt="ERGO WOODLINES PVT.LTD" title="ERGO WOODLINES PVT.LTD">
+                                            </div>
+                                            <a class="port_iconbox" href="https://ergowoodlines.com/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
                                             </a>
                                         </div>
                                     </div>
@@ -439,9 +448,12 @@
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
                                     <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="arenasaltlk.com">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
                                                 <img src="images/arena-animation.webp" alt="ARENA ANIMATION" title="ARENA ANIMATION">
+                                            </div>
+                                            <a class="port_iconbox" href="https://arenasaltlk.com/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
                                             </a>
                                         </div>
                                     </div>
@@ -450,9 +462,12 @@
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
                                     <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="jagannathcompany.com">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
                                                 <img src="images/jagannath-company.webp" alt="JAGANNATH COMPANY" title="JAGANNATH COMPANY">
+                                            </div>
+                                            <a class="port_iconbox" href="https://jagannathcompany.com/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
                                             </a>
                                         </div>
                                     </div>
@@ -461,9 +476,12 @@
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
                                     <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="wfitgym.in">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
                                                 <img src="images/w-fit-gym.webp" alt="W FIT GYM" title="W FIT GYM">
+                                            </div>
+                                            <a class="port_iconbox" href="https://wfitgym.in/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
                                             </a>
                                         </div>
                                     </div>
@@ -484,7 +502,6 @@
                                             </div>
                                             <img src="images/hairy-cartoon.webp" alt="Hairy Cartoon" title="Hairy Cartoon">
                                             <div class="gallery-hover-bg"></div>
-
                                         </div>
                                     </div>
                                 </div>
@@ -498,7 +515,6 @@
                                             </div>
                                             <img src="images/menucard-design.webp" alt="Menu Card Design" title="Menu Card Design">
                                             <div class="gallery-hover-bg"></div>
-
                                         </div>
                                     </div>
                                 </div>
@@ -510,9 +526,8 @@
                                             <div class="gallery-iconbox">
                                                 <a href="images/nature-beauty.webp" class="fa fa-search gallery-icon-1 bimg" aria-hidden="true"></a>
                                             </div>
-                                            <img src="images/nature-beauty.webp" alt="" title="">
+                                            <img src="images/nature-beauty.webp" alt="Nature Beauty" title="Nature Beauty">
                                             <div class="gallery-hover-bg"></div>
-
                                         </div>
                                     </div>
                                 </div>
@@ -524,9 +539,8 @@
                                             <div class="gallery-iconbox">
                                                 <a href="images/jewellery-banner.webp" class="fa fa-search gallery-icon-1 bimg" aria-hidden="true"></a>
                                             </div>
-                                            <img src="images/jewellery-banner.webp" alt="" title="">
+                                            <img src="images/jewellery-banner.webp" alt="Jewellery Banner" title="Jewellery Banner">
                                             <div class="gallery-hover-bg"></div>
-
                                         </div>
                                     </div>
                                 </div>
@@ -538,9 +552,8 @@
                                             <div class="gallery-iconbox">
                                                 <a href="images/tom-&-jerry.webp" class="fa fa-search gallery-icon-1 bimg" aria-hidden="true"></a>
                                             </div>
-                                            <img src="images/tom-&-jerry.webp" alt="" title="">
+                                            <img src="images/tom-&-jerry.webp" alt="Tom & Jerry Cartoon" title="Tom & Jerry Cartoon">
                                             <div class="gallery-hover-bg"></div>
-
                                         </div>
                                     </div>
                                 </div>
@@ -552,9 +565,8 @@
                                             <div class="gallery-iconbox">
                                                 <a href="images/banner-design-shadow-effect.webp" class="fa fa-search gallery-icon-1 bimg" aria-hidden="true"></a>
                                             </div>
-                                            <img src="images/banner-design-shadow-effect.webp" alt="" title="">
+                                            <img src="images/banner-design-shadow-effect.webp" alt="Banner Design" title="Banner Design">
                                             <div class="gallery-hover-bg"></div>
-
                                         </div>
                                     </div>
                                 </div>
@@ -567,66 +579,78 @@
                             <div class="row">
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
-                                    <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="cognianhomes.com">
-                                                <img src="images/cognian.webp" alt="Cognian Home Solutions Pvt. Ltd." title="Cognian Home Solutions Pvt. Ltd.">
-                                            </a>
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/creative-platform.webp" class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/creative-platform.webp" alt="Creative Platform" title="Creative Platform">
+                                            <div class="gallery-hover-bg"></div>
                                         </div>
                                     </div>
                                 </div>
                                 <!-- ====== Portfolio item end ======= -->
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
-                                    <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="agorabanquet.com">
-                                                <img src="images/agora-banquets.webp" alt="Agora Banquet" title="Agora Banquet">
-                                            </a>
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/m-kajal-dresses.webp" class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/m-kajal-dresses.webp" alt="M Kajal Dresses" title="M Kajal Dresses">
+                                            <div class="gallery-hover-bg"></div>
                                         </div>
                                     </div>
                                 </div>
                                 <!-- ====== Portfolio item end ======= -->
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
-                                    <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="ergowoodlines.com">
-                                                <img src="images/ergo-woodline.webp" alt="ERGO WOODLINES PVT.LTD" title="ERGO WOODLINES PVT.LTD">
-                                            </a>
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/soch-trading-company.webp" class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/soch-trading-company.webp" alt="Soch Trading Company" title="Soch Trading Company">
+                                            <div class="gallery-hover-bg"></div>
                                         </div>
                                     </div>
                                 </div>
                                 <!-- ====== Portfolio item end ======= -->
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
-                                    <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="arenasaltlk.com">
-                                                <img src="images/arena-animation.webp" alt="ARENA ANIMATION" title="ARENA ANIMATION">
-                                            </a>
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/mahasakti.webp" class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/mahasakti.webp" alt="Mahashakti Narayani Polytex LLP" title="Mahashakti Narayani Polytex LLP">
+                                            <div class="gallery-hover-bg"></div>
                                         </div>
                                     </div>
                                 </div>
                                 <!-- ====== Portfolio item end ======= -->
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
-                                    <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="jagannathcompany.com">
-                                                <img src="images/jagannath-company.webp" alt="JAGANNATH COMPANY" title="JAGANNATH COMPANY">
-                                            </a>
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/aman-house-style.webp" class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/aman-house-style.webp" alt="Aman Hose Style" title="Aman Hose Style">
+                                            <div class="gallery-hover-bg"></div>
                                         </div>
                                     </div>
                                 </div>
                                 <!-- ====== Portfolio item end ======= -->
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
-                                    <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-img">
-                                            <a href="wfitgym.in">
-                                                <img src="images/w-fit-gym.webp" alt="W FIT GYM" title="W FIT GYM">
-                                            </a>
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/vinpath-mechinary.webp" class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/vinpath-mechinary.webp" alt="VINPAT MACHINERY PRIVATE LIMITED" title="VINPAT MACHINERY PRIVATE LIMITED">
+                                            <div class="gallery-hover-bg"></div>
                                         </div>
                                     </div>
                                 </div>
