new styles added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <h3 class="hello">Hello, my name is <span class="name">Samir Majumdar</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
                             <p>I'm a web designer with extensive experience for over 3 years. I'm expertised to create template design, graphic design and website design. I am learning React JS & other backend parts I wish to be a fullstack developer.</p>
-                            <a href="#contact" class="btn hire-me">Hire Me</a>
+                            <a href="#contact" class="btn1 hire-me">Hire Me</a>
                         </div>
                         <div class="home-img desk-img padd-15">
                             <img src="images/samir.jpg" alt="" title="">
@@ -126,8 +126,8 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="pdf/SAMIR-MAJUMDAR-CV(4.11.23).pdf" target="_blank" class="btn">Download CV</a>
-                                            <a href="#contact" class="btn hire-me">Hire Me</a>
+                                            <a href="pdf/SAMIR-MAJUMDAR-CV(4.11.23).pdf" target="_blank" class="btn1">Download CV</a>
+                                            <a href="#contact" class="btn1 hire-me">Hire Me</a>
                                         </div>
                                     </div>
                                 </div>
@@ -747,7 +747,7 @@
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
                                     <div class="form-group text-center">
-                                        <button type="submit" class="btn" name="submit">Send Message</button>
+                                        <button type="submit" class="btn1 w-100 d-block" name="submit">Send Message</button>
                                     </div>
                                 </div>
                             </div>
