--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-img mob-img padd-15">
-                            <img src="images/samir.jpg" alt="" title="">
+                            <img src="images/samir-majumdar.webp" alt="Samir Majumdar" title="Samir Majumdar">
                         </div>
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Samir Majumdar</span></h3>
@@ -65,7 +65,7 @@
                             <a href="#contact" class="btn1 hire-me">Hire Me</a>
                         </div>
                         <div class="home-img desk-img padd-15">
-                            <img src="images/samir.jpg" alt="" title="">
+                            <img src="images/samir-majumdar.webp" alt="Samir Majumdar" title="Samir Majumdar">
                         </div>
                     </div>
                 </div>
