--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>I'm Web Designer and <span>Web Developer</span></h3>
+                                    <h3>I am <span>Web & Graphic Designer</span></h3>
                                     <p>I'm a web designer with extensive experience for over 3 years. I'm expertised to create template design, graphic design and website design. I am learning React JS & other backend parts I wish to be a fullstack developer.</p>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                                         B.Sc (General)
                                                     </h4>
                                                     <p class="timeline-text">
-                                                        I've passed B.Sc (General) from Vidyasagar College under Calcutta Univercity.
+                                                        I have completed my B.Sc (General) degree from Vidyasagar College under Calcutta University.
                                                     </p>
                                                 </div>
                                                 <!-- ====== timeline item ======= -->
@@ -209,7 +209,7 @@
                                                         H.S
                                                     </h4>
                                                     <p class="timeline-text">
-                                                        I've passed Higher Secondary Education from Sarada Charan Aryan Institute.
+                                                        I have completed my Higher Secondary Education from Sarada Charan Aryan Institute.
                                                     </p>
                                                 </div>
                                                 <!-- ====== timeline item ======= -->
@@ -223,7 +223,7 @@
                                                         Secondary Education
                                                     </h4>
                                                     <p class="timeline-text">
-                                                        I've passed Secondary Education from Sailendra Sircar Vidyalaya.
+                                                        I have completed my Secondary Education from Sailendra Sircar Vidyalaya.
                                                     </p>
                                                 </div>
                                             </div>
