--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                     <i class="fa-brands fa-whatsapp"></i>
                                 </a>
                             </div>
-                            <a href="#contact" class="btn1 hire-me">Hire Me</a>
+                            <!-- <a href="#contact" class="btn1 hire-me">Hire Me</a> -->
                         </div>
                         <div class="home-img desk-img padd-15">
                             <img src="images/samir-majumdar.webp" alt="Samir Majumdar" title="Samir Majumdar">
@@ -856,6 +856,20 @@
         </div>
     </div>
     <!-- ====== Style Switcher End ======= -->
+
+    <!-- ====== Whatsapp button start ====== -->
+    <div class="whatsapp-container">
+        <div class="phone-call">
+            <a target="_blank" href="https://wa.me/6290215702"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Chat on WhatsApp" title="Chat on WhatsApp"></a>
+        </div>
+    </div>
+    <!-- ====== Whatsapp button end ====== -->
+
+    <!-- ======Scroll Top button-->
+    <a id="backtotop" href="#" class="back-to-top">
+        <i class="fa fa-arrow-up" aria-hidden="true"></i>
+    </a>
+    <!--Scroll Top button-->
 
 
     <!-- ====== Js files ======= -->
