--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" />
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 
+        <link rel="shortcut icon" href="images/favicon.webp" type="image/x-icon">
 </head>
 
 <body>
@@ -36,7 +37,7 @@
         <!-- ====== Aside start ======= -->
         <div class="aside">
             <div class="logo">
-                <a href="#"><span>S</span>amir</a>
+                <a href="/"><span>S</span>amir</a>
             </div>
             <div class="nav-toggler">
                 <span></span>
