--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- ====== Aside start ======= -->
         <div class="aside">
             <div class="logo">
-                <a href="/"><span>S</span>amir</a>
+                <a href=""><span>S</span>amir</a>
             </div>
             <div class="nav-toggler">
                 <span></span>
