--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="pdf/SAMIR-MAJUMDAR-CV(4.11.23).pdf" target="_blank"
+                                            <a href="pdf/Samir-Majumdar-CV(29.02.24)_compressed.pdf" target="_blank"
                                                 class="btn1">Download CV</a>
                                             <a href="#contact" class="btn1 hire-me">Hire Me</a>
                                         </div>
